serveur minecraft mode harcore

--- a/roles/minecraft/defaults/main.yml
+++ b/roles/minecraft/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 
-minecraft_vanilla_docker_compose:
+minecraft_docker_compose:
   name: minecraft_vanilla
   directory: /srv/docker-compose
   port: 25565
+  modpack: []
+  version: "1.21.3"
