--- a/pb_minecraft.yml
+++ b/pb_minecraft.yml
@@ -2,4 +2,4 @@
   hosts: 'servers'
   become: true
   roles:
-    - { role: 'minecraft_vanilla', tags: [ 'mine' ] }
+    - { role: 'minecraft', tags: [ 'mine' ] }
